# demo-ecologits-logfire

./: .gitignore  README.md  pyproject.toml
src/: demo_openai.py
